--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "projectmk",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "serve": "json-server --watch db.json"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.3"
-  }
+  },
+  "description": ""
 }
